# FractalEngine

./: .gitignore  CMakeLists.txt  README.md  optimize_all.py  render_50x300.csv
licenta-cgal/: CMakeLists.txt
licenta-cgal/src/: MeshOptimizer.hpp  mesh_opt.cpp
lsysGrammar/: benchmark_full_generation.csv  generator.py  grammar.py  hilbert.py  main.py  scene_layout_hilbert.json
lsysGrammar/DragonUmbrella/: DragonUmbrella__parametric__iter_0.txt  DragonUmbrella__parametric__iter_1.txt  DragonUmbrella__parametric__iter_12.txt  DragonUmbrella__parametric__iter_2.txt  DragonUmbrella__parametric__iter_3.txt  DragonUmbrella__parametric__iter_4.txt  DragonUmbrella__parametric__iter_5.txt
lsysGrammar/EntropicTitan/: EntropicTitan__stochastic__iter_0.txt  EntropicTitan__stochastic__iter_1.txt  EntropicTitan__stochastic__iter_2.txt  EntropicTitan__stochastic__iter_3.txt  EntropicTitan__stochastic__iter_4.txt  EntropicTitan__stochastic__iter_5.txt  EntropicTitan__stochastic__iter_6.txt  EntropicTitan__stochastic__iter_7.txt
lsysGrammar/FillSpace/: scene_layout_hilbert_1.json  scene_layout_hilbert_2.json  scene_layout_hilbert_3.json  scene_layout_hilbert_4.json  scene_layout_hilbert_5.json
lsysGrammar/FractalBinaryTree/: FractalBinaryTree__parametric__iter_0.txt  FractalBinaryTree__parametric__iter_1.txt  FractalBinaryTree__parametric__iter_2.txt  FractalBinaryTree__parametric__iter_3.txt  FractalBinaryTree__parametric__iter_4.txt  FractalBinaryTree__parametric__iter_5.txt  FractalBinaryTree__parametric__iter_6.txt  FractalBinaryTree__parametric__iter_7.txt  FractalBinaryTree__parametric__iter_8.txt  FractalBinaryTree__parametric__iter_9.txt
lsysGrammar/FractalEmperor/: FractalEmperor__standard__iter_0.txt  FractalEmperor__standard__iter_1.txt  FractalEmperor__standard__iter_2.txt  FractalEmperor__standard__iter_3.txt  FractalEmperor__standard__iter_4.txt  FractalEmperor__standard__iter_5.txt  FractalEmperor__standard__iter_6.txt  FractalEmperor__standard__iter_7.txt  FractalEmperor__standard__iter_8.txt
lsysGrammar/FractalPine/: FractalPine__standard__iter_0.txt  FractalPine__standard__iter_1.txt  FractalPine__standard__iter_2.txt  FractalPine__standard__iter_3.txt  FractalPine__standard__iter_4.txt  FractalPine__standard__iter_5.txt
lsysGrammar/GoldenOaktree/: GoldenOaktree__parametric__iter_1.txt  GoldenOaktree__parametric__iter_2.txt  GoldenOaktree__parametric__iter_3.txt  GoldenOaktree__parametric__iter_4.txt  GoldenOaktree__parametric__iter_5.txt  GoldenOaktree__parametric__iter_6.txt  GoldenOaktree__parametric__iter_7.txt
lsysGrammar/GoldenPineTree/: GoldenPineTree__parametric__iter_0.txt  GoldenPineTree__parametric__iter_1.txt  GoldenPineTree__parametric__iter_2.txt  GoldenPineTree__parametric__iter_3.txt  GoldenPineTree__parametric__iter_4.txt  GoldenPineTree__parametric__iter_5.txt  GoldenPineTree__parametric__iter_6.txt  GoldenPineTree__parametric__iter_7.txt
lsysGrammar/HighlandOak/: HighlandOak__parametric__iter_0.txt  HighlandOak__parametric__iter_1.txt  HighlandOak__parametric__iter_15.txt  HighlandOak__parametric__iter_2.txt  HighlandOak__parametric__iter_3.txt  HighlandOak__parametric__iter_4.txt  HighlandOak__parametric__iter_5.txt  HighlandOak__parametric__iter_6.txt  HighlandOak__parametric__iter_7.txt
lsysGrammar/OakSentinel/: OakSentinel__parametric__iter_0.txt  OakSentinel__parametric__iter_1.txt  OakSentinel__parametric__iter_16.txt  OakSentinel__parametric__iter_2.txt  OakSentinel__parametric__iter_3.txt  OakSentinel__parametric__iter_4.txt  OakSentinel__parametric__iter_5.txt  OakSentinel__parametric__iter_6.txt  OakSentinel__parametric__iter_7.txt  OakSentinel__parametric__iter_8.txt  OakSentinel__parametric__iter_9.txt
lsysGrammar/PinOakMajestic/: PinOakMajestic__parametric__iter_0.txt  PinOakMajestic__parametric__iter_1.txt  PinOakMajestic__parametric__iter_10.txt  PinOakMajestic__parametric__iter_2.txt  PinOakMajestic__parametric__iter_3.txt  PinOakMajestic__parametric__iter_4.txt  PinOakMajestic__parametric__iter_5.txt  PinOakMajestic__parametric__iter_6.txt  PinOakMajestic__parametric__iter_7.txt  PinOakMajestic__parametric__iter_8.txt  PinOakMajestic__parametric__iter_9.txt
lsysGrammar/RandomDream/: RandomDream__stochastic__iter_0.txt  RandomDream__stochastic__iter_1.txt  RandomDream__stochastic__iter_2.txt  RandomDream__stochastic__iter_3.txt  RandomDream__stochastic__iter_4.txt  RandomDream__stochastic__iter_5.txt  RandomDream__stochastic__iter_6.txt  RandomDream__stochastic__iter_7.txt
lsysGrammar/SkyrootWanderer/: SkyrootWanderer__parametric__iter_0.txt  SkyrootWanderer__parametric__iter_1.txt  SkyrootWanderer__parametric__iter_12.txt  SkyrootWanderer__parametric__iter_2.txt  SkyrootWanderer__parametric__iter_3.txt  SkyrootWanderer__parametric__iter_4.txt
lsysGrammar/SpiralGuardian/: SpiralGuardian__parametric__iter_0.txt  SpiralGuardian__parametric__iter_1.txt  SpiralGuardian__parametric__iter_10.txt  SpiralGuardian__parametric__iter_2.txt  SpiralGuardian__parametric__iter_3.txt  SpiralGuardian__parametric__iter_4.txt  SpiralGuardian__parametric__iter_5.txt  SpiralGuardian__parametric__iter_6.txt
lsysGrammar/ThunderstruckGiant/: ThunderstruckGiant__parametric__iter_0.txt  ThunderstruckGiant__parametric__iter_1.txt  ThunderstruckGiant__parametric__iter_2.txt  ThunderstruckGiant__parametric__iter_3.txt  ThunderstruckGiant__parametric__iter_4.txt  ThunderstruckGiant__parametric__iter_5.txt  ThunderstruckGiant__parametric__iter_6.txt  ThunderstruckGiant__parametric__iter_7.txt
lsysGrammar/benchmark_lsystems/: SimpleTree__iter_1.txt  SimpleTree__iter_4.txt
plotting/: benchmark_full_generation.csv  gen_normalized  opt_1.csv  opt_10.csv  opt_20.csv  opt_40.csv  opt_5.csv  plotting_metrics.ipynb  raw_1.csv  raw_10.csv  raw_20.csv  raw_40.csv  raw_5.csv  scene_layout_zigzag.json
results/: optimize_times.csv
shaders/: fragment-copac.glsl  fragment-mirror.glsl  fragment-sfera.glsl  vertex-fractal.glsl  vertex-sfera.glsl
src/: main.cpp  test_load.cpp
src/core/: Camera.cpp  Camera.h  (+10 more)
tests/: test_mesh.cpp  test_optimizer.cpp
(+109 files in other folders)
